# trading-buddy

./: .gitignore  .gitmodules  .prettierignore  AGENTS.md  README.md  VISION.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
docs/: ARCHITECTURE.md  DECISIONS.md  MVP.md  PRODUCT.md  PROGRESS.md  TASKS.md
next/: README.md
scripts/: buddy-pose-config.json  extract-buddy-poses.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: buddy-drag.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: acceptance.rs  agent_events.rs  agent_session.rs  desktop_world.rs  hermes_process.rs  hermes_rpc.rs  lib.rs  main.rs  petdex.rs  window_manager.rs
src-tauri/src/commands/: local_ai.rs  mod.rs  storage.rs
src-tauri/src/continuity/: mod.rs  models.rs  repository.rs
src-tauri/src/local_ai/: client.rs  errors.rs  mod.rs  models.rs  stream.rs
src-tauri/src/storage/: errors.rs  migrations.rs  mod.rs  models.rs  repository.rs  service.rs
src-tauri/src/trading/: commands.rs  coordinator.rs  decimal.rs  environment.rs  errors.rs  fixtures.rs  mod.rs  models.rs  repository.rs  responses.rs  sync.rs  validation.rs
src-tauri/tests/fixtures/hyperliquid/: account-empty.json  account-multiple-positions.json  account-single-long.json  all-mids-normal.json  fills-duplicates.json  fills-normal.json  funding-normal.json  malformed-number.json  metadata-normal.json  missing-required-field.json  orders-normal.json  partial-missing-optional.json  provider-error.json  rate-limit-error.json
(+248 files in other folders)
